proj/solution1/.autopilot/db/clang.err.log
./resnet_layer1.cpp:37:17: error: use of undeclared identifier 'resnet_layer_in_fm'; did you mean 'resnet_layer1_input_fm'?
                resnet_layer_in_fm[c][h][w] = resnet_layer1_input_fm[c][h][w];
                ^~~~~~~~~~~~~~~~~~
                resnet_layer1_input_fm
./resnet_layer1.cpp:6:14: note: 'resnet_layer1_input_fm' declared here
        fm_t resnet_layer1_input_fm[64][184][320],
             ^
./resnet_layer1.cpp:58:17: error: use of undeclared identifier 'ds_fm'
                ds_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                ^
./resnet_layer1.cpp:58:34: error: use of undeclared identifier 'resnet_layer_out_fm'
                ds_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                                 ^
./resnet_layer1.cpp:80:17: error: use of undeclared identifier 'resnet_layer_in_fm'; did you mean 'resnet_layer1_input_fm'?
                resnet_layer_in_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                ^~~~~~~~~~~~~~~~~~
                resnet_layer1_input_fm
./resnet_layer1.cpp:6:14: note: 'resnet_layer1_input_fm' declared here
        fm_t resnet_layer1_input_fm[64][184][320],
             ^
./resnet_layer1.cpp:80:47: error: use of undeclared identifier 'resnet_layer_out_fm'
                resnet_layer_in_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                                              ^
./resnet_layer1.cpp:103:17: error: use of undeclared identifier 'resnet_layer_in_fm'; did you mean 'resnet_layer1_input_fm'?
                resnet_layer_in_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                ^~~~~~~~~~~~~~~~~~
                resnet_layer1_input_fm
./resnet_layer1.cpp:6:14: note: 'resnet_layer1_input_fm' declared here
        fm_t resnet_layer1_input_fm[64][184][320],
             ^
./resnet_layer1.cpp:103:47: error: use of undeclared identifier 'resnet_layer_out_fm'
                resnet_layer_in_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                                              ^
./resnet_layer1.cpp:114:5: error: no template named 'resnet_bottleneck_conv3_bn3_add_relu'; did you mean 'resnet_bottleneck_conv3_bn3_relu'?
    resnet_bottleneck_conv3_bn3_add_relu<64, 184, 320,
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    resnet_bottleneck_conv3_bn3_relu
./qdtrack.h:495:6: note: 'resnet_bottleneck_conv3_bn3_relu' declared here
void resnet_bottleneck_conv3_bn3_relu(
     ^
./resnet_layer1.cpp:126:17: error: use of undeclared identifier 'resnet_layer_in_fm'; did you mean 'resnet_layer1_input_fm'?
                resnet_layer_in_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                ^~~~~~~~~~~~~~~~~~
                resnet_layer1_input_fm
./resnet_layer1.cpp:6:14: note: 'resnet_layer1_input_fm' declared here
        fm_t resnet_layer1_input_fm[64][184][320],
             ^
./resnet_layer1.cpp:126:47: error: use of undeclared identifier 'resnet_layer_out_fm'
                resnet_layer_in_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                                              ^
./resnet_layer1.cpp:127:17: error: use of undeclared identifier 'ds_fm'
                ds_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                ^
./resnet_layer1.cpp:127:34: error: use of undeclared identifier 'resnet_layer_out_fm'
                ds_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                                 ^
./resnet_layer1.cpp:150:17: error: use of undeclared identifier 'resnet_layer_in_fm'; did you mean 'resnet_layer1_input_fm'?
                resnet_layer_in_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                ^~~~~~~~~~~~~~~~~~
                resnet_layer1_input_fm
./resnet_layer1.cpp:6:14: note: 'resnet_layer1_input_fm' declared here
        fm_t resnet_layer1_input_fm[64][184][320],
             ^
./resnet_layer1.cpp:150:47: error: use of undeclared identifier 'resnet_layer_out_fm'
                resnet_layer_in_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                                              ^
./resnet_layer1.cpp:172:17: error: use of undeclared identifier 'resnet_layer_in_fm'; did you mean 'resnet_layer1_input_fm'?
                resnet_layer_in_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                ^~~~~~~~~~~~~~~~~~
                resnet_layer1_input_fm
./resnet_layer1.cpp:6:14: note: 'resnet_layer1_input_fm' declared here
        fm_t resnet_layer1_input_fm[64][184][320],
             ^
./resnet_layer1.cpp:172:47: error: use of undeclared identifier 'resnet_layer_out_fm'
                resnet_layer_in_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                                              ^
./resnet_layer1.cpp:183:5: error: no template named 'resnet_bottleneck_conv3_bn3_add_relu'; did you mean 'resnet_bottleneck_conv3_bn3_relu'?
    resnet_bottleneck_conv3_bn3_add_relu<64, 184, 320,
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    resnet_bottleneck_conv3_bn3_relu
./qdtrack.h:495:6: note: 'resnet_bottleneck_conv3_bn3_relu' declared here
void resnet_bottleneck_conv3_bn3_relu(
     ^
./resnet_layer1.cpp:194:17: error: use of undeclared identifier 'resnet_layer_in_fm'; did you mean 'resnet_layer1_input_fm'?
                resnet_layer_in_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                ^~~~~~~~~~~~~~~~~~
                resnet_layer1_input_fm
./resnet_layer1.cpp:6:14: note: 'resnet_layer1_input_fm' declared here
        fm_t resnet_layer1_input_fm[64][184][320],
             ^
./resnet_layer1.cpp:194:47: error: use of undeclared identifier 'resnet_layer_out_fm'
                resnet_layer_in_fm[c][h][w] = resnet_layer_out_fm[c][h][w];
                                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
